[FIX] Desktop Sidebar Move Layout Bug

--- a/style.css
+++ b/style.css
@@ -63,9 +63,9 @@ body {
   border-right: 5px solid rgb(49, 52, 53);
 }
 
-.active-bar {
+/* .active-bar {
   margin-left: 20px;
-}
+} */
 
 .content {
   width: 100%;
